# core

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  core.cpp  core.h  tests.cpp
.github/workflows/: build.yml
